--- a/FinanceApp/app/build.gradle
+++ b/FinanceApp/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.github.BlacKCaT27:CurrencyEditText:v1.4.4'
+    compile 'com.github.klutzer:CurrencyEditText:-SNAPSHOT'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.github.satyan:sugar:1.5'
 }
