--- a/FipeApp/app/build.gradle
+++ b/FipeApp/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "erico.financeapp"
+        applicationId "erico.fipeapp"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
